--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,7 @@ body {
     height: 100vh;
     margin: 0;
     background: url('Images/Pinkcloud.jpg') repeat;
+    background-size: 100% 100%;
     font-size: 35px;
     color: rgb(255, 0, 174);
 }
